WebContent/inc/css/style.css
/* ... */
/*** Hero Section Styles ***/

#hero-section {
  width: 100vw;
  background: url(../images/bg.png) no-repeat center;
  background-size: cover;
  position: relative;
  z-index: 0;
}

.inner-banner {
  background: url(../images/inner.jpg)no-repeat center top -105px;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  -ms-background-size: cover;
  min-height: 350px;
}

li.breadcrumb-item a {
  color:#ff8533;
  font-weight: 800;
}

.breadcrumb-item.active {
  color: #000;
  font-weight: 600;
}

div#hero-section:before {
  position: absolute;
  content: '';
  /* background: rgba(22, 82, 141, 0.22); */
  height: 100%;
  width: 100%;
  z-index: -1;
}

h1.w3-title {
  color: #fff;
  font-size: 4em;
  text-transform: capitalize;
  text-shadow: 1px 1px 1px #000;
}

#head-line {
  width: 520px;
  height: 30px;
  background: #fff;
  border-radius: 90px;
  position: relative;
}

#head-line:before,
#head-line:after {
  content: '';
  height: 30px;
  border-radius: 90px;
}

#head-line:before {
  width: 360px;
  background: #fff;
  position: absolute;
  top: -60px;
  left: 50%;
  -webkit-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
}

#head-line:after {
  width: 200px;
  background: #fff;
  position: absolute;
  left: 50%;
  bottom: -60px;
  -webkit-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
}

/*** Section Styles ***/

section {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

/*** Responsive Menu For Smaller Device ***/

@media screen and (max-width: 800px) {
  #menu-toggle {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  nav.main-header {
    height: 75px;
  }
  ul.nav-agile {
    display: inline-block;
    width: 100vw;
    height: 0vw;
    background: transparent;
    position: absolute;
    top: 65px !important;
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
  }
  div#word-mark h1 a {
    font-size: 0.9em;
  }
  nav.main-header.navShadow {
    height: 65px;
  }
  ul.showMenu li {
    height: auto;
    opacity: 1;
    visibility: visible;
    padding-top: 1.5em;
  }
  ul.showMenu li {
    height: 70px;
    opacity: 1;
    visibility: visible;
    margin: 0;
    background: #333;
	padding: 1em 1.35em;
	width: auto;
  }
  .nav-agile li {
    width: 15%;
    float: left;
    padding-left: 40px;
    opacity: 0;
    visibility: hidden;
    margin-left: 0;
    -webkit-transition: all 0.3s 0.1s;
    transition: all 0.3s 0.1s;
  }
  #head-line {
    -webkit-transform: scale(0.8);
    transform: scale(0.8);
  }
}





.banner {
    background: url(../images/bg.png)no-repeat center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    -ms-background-size: cover;
    background-size: cover;
    position: relative;
    z-index: 1;
}

.banner:after,
.inner_banner:after {
    background-color: #000;
    content: "";
    left: 0;
    opacity: 0.5;
    top: 0;
    position: absolute;
    height: 100%;
    width: 100%;
    z-index: -1;
}

.agileinfo-logo h2 {
    color: #fff;
    display: inline-block;
    font-size: 3.5em;
    text-transform: capitalize;
    font-weight: 400;
	line-height: 80px;
}

.agileinfo-logo h2 span {
    color: #ffffff;
    font-size: 0.7em;
    display: block;
    background: rgba(0, 0, 0, 0.4);
    width: 85px;
    line-height: 90px;
    height: 85px;
    border-radius: 50%;
}
.slider-info a.btn {
    background: none;
    padding: 10px 25px;
    color: #fff;
    border: 2px solid #fff;
    font-size: 16px;
    letter-spacing: 1px;
    border-radius: 0;
}
.slider-info a.btn:hover {
    border: 2px solid #ff6600;
    color: #ff6600;
}
h3.txt-w3_agile {
    font-size: 3.2em;
    color: #fff;
    text-transform: capitalize;
    font-weight: 100;
}

.banner-text {
    padding: 13vw 0;
}

.banner-form h5 {
    color: #fff;
     font-size: 25px;
    letter-spacing: 1px;
    font-weight: 600;
	text-align: center;
}
.banner-form h5 i {
    font-size: 20px;
}
.banner-form input[type="text"], .banner-form input[type="email"], .banner-form input[type="password"] {
    width: 100%;
    color: #eee;
    outline: none;
    font-size: 16px;
    padding: 0.8em 1em;
    border: 1px solid #ff944d;
    -webkit-appearance: none;
    margin-bottom: 0.8em;
    letter-spacing: 1px;
    background: none;
     border-radius: 0;
}
.banner-form input[type=submit] {
    color: #FFFFFF;
    padding: .8em 1em;
    font-size: 16px;
    cursor: pointer;
    border: 2px solid #ff6600;
    outline: none;
    background: #ff6600;
    width: 100%;
    letter-spacing: 1px;
    transition: 0.5s all;
     border-radius: 0;
    -webkit-transition: 0.5s all;
    -moz-transition: 0.5s all;
    -o-transition: 0.5s all;
    -ms-transition: 0.5s all;
}
.banner-form input[type=submit]:hover {
    background: #333;
    border: 2px solid #333;
}

/*-- place holder --*/

.banner-form ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #ccc;
}
.banner-form ::-moz-placeholder { /* Firefox 19+ */
  color: #ccc;
}
.banner-form :-ms-input-placeholder { /* IE 10+ */
  color: #ccc;
}
.banner-form :-moz-placeholder { /* Firefox 18- */
  color: #ccc;
}

/*-- //place holder --*/

/*-- modal popup video --*/
.modal-body.video iframe {
	border: none;
	width: 100%;
	min-height: 250px;
}
/*-- //modal popup video --*/

/*-- modal popup login --*/
.login h5 {
    font-size: 26px;
    color: #333;
    letter-spacing: 1px;
}
.login label {
    font-size: 17px;
    letter-spacing: .5px;
    color: #777;
}
.login p a {
    color: #999;
}
/*-- //modal popup login --*/

/*-- modal popup readmore --*/
.modal-body {
    font-size: 15px;
    line-height: 28px;
    color: #2a2a2a;
}
.modal-title {
    font-size: 28px !important;
     font-weight: 700;
    padding: 0 !important;
    letter-spacing: 2px;
    color: #333;
}
/* ... */

